// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/admin_console/system_users/system_users_dropdown/system_users_dropdown renderDeactivateMemberModal should not render the bot accounts warning in case the user do not have any bot accounts 1`] = `
<div>
  <injectIntl(FormattedMarkdownMessage)
    defaultMessage="This action deactivates {username}. They will be logged out and not have access to any teams or channels on this system.\\\\n"
    id="deactivate_member_modal.desc"
    values={
      Object {
        "username": "some-user",
      }
    }
  />
  <injectIntl(FormattedMarkdownMessage)
    defaultMessage="Are you sure you want to deactivate {username}?"
    id="deactivate_member_modal.desc.confirm"
    values={
      Object {
        "username": "some-user",
      }
    }
  />
</div>
`;

exports[`components/admin_console/system_users/system_users_dropdown/system_users_dropdown renderDeactivateMemberModal should not render the bot accounts warning. owner_id has no enabled bot accounts 1`] = `
<div>
  <injectIntl(FormattedMarkdownMessage)
    defaultMessage="This action deactivates {username}. They will be logged out and not have access to any teams or channels on this system.\\\\n"
    id="deactivate_member_modal.desc"
    values={
      Object {
        "username": "some-user",
      }
    }
  />
  <injectIntl(FormattedMarkdownMessage)
    defaultMessage="Are you sure you want to deactivate {username}?"
    id="deactivate_member_modal.desc.confirm"
    values={
      Object {
        "username": "some-user",
      }
    }
  />
</div>
`;

exports[`components/admin_console/system_users/system_users_dropdown/system_users_dropdown renderDeactivateMemberModal should render the bot accounts warning. owner_id has enabled bot accounts 1`] = `
<div>
  <injectIntl(FormattedMarkdownMessage)
    defaultMessage="This action deactivates {username}.\\\\n \\\\n * They will be logged out and not have access to any teams or channels on this system.\\\\n * Bot accounts they manage will be disabled along with their integrations. To enable them again, go to [Integrations > Bot Accounts]({siteURL}/_redirect/integrations/bots). [Learn more about bot accounts](!https://mattermost.com/pl/default-bot-accounts).\\\\n \\\\n \\\\n"
    id="deactivate_member_modal.desc.for_users_with_bot_accounts"
    values={
      Object {
        "siteURL": "http://localhost:8065",
        "username": "some-user",
      }
    }
  />
  <injectIntl(FormattedMarkdownMessage)
    defaultMessage="Are you sure you want to deactivate {username}?"
    id="deactivate_member_modal.desc.confirm"
    values={
      Object {
        "username": "some-user",
      }
    }
  />
</div>
`;

exports[`components/admin_console/system_users/system_users_dropdown/system_users_dropdown should match snapshot with license 1`] = `
<Fragment>
  <ConfirmModal
    confirmButtonClass="btn btn-danger"
    confirmButtonText={
      <FormattedMessage
        defaultMessage="Deactivate"
        id="deactivate_member_modal.deactivate"
      />
    }
    message={
      <div>
        <injectIntl(FormattedMarkdownMessage)
          defaultMessage="This action deactivates {username}. They will be logged out and not have access to any teams or channels on this system.\\\\n"
          id="deactivate_member_modal.desc"
          values={
            Object {
              "username": "some-user",
            }
          }
        />
        <injectIntl(FormattedMarkdownMessage)
          defaultMessage="Are you sure you want to deactivate {username}?"
          id="deactivate_member_modal.desc.confirm"
          values={
            Object {
              "username": "some-user",
            }
          }
        />
      </div>
    }
    modalClass=""
    onCancel={[Function]}
    onConfirm={[Function]}
    show={false}
    title={
      <FormattedMessage
        defaultMessage="Deactivate {username}"
        id="deactivate_member_modal.title"
        values={
          Object {
            "username": "some-user",
          }
        }
      />
    }
  />
  <ConfirmModal
    confirmButtonClass="btn btn-danger"
    confirmButtonText={
      <FormattedMessage
        defaultMessage="Revoke"
        id="revoke_user_sessions_modal.revoke"
      />
    }
    message={
      <FormattedMessage
        defaultMessage="This action revokes all sessions for {username}. They will be logged out from all devices. Are you sure you want to revoke all sessions for {username}?"
        id="revoke_user_sessions_modal.desc"
        values={
          Object {
            "username": "some-user",
          }
        }
      />
    }
    modalClass=""
    onCancel={[Function]}
    onConfirm={[Function]}
    show={false}
    title={
      <FormattedMessage
        defaultMessage="Revoke Sessions for {username}"
        id="revoke_user_sessions_modal.title"
        values={
          Object {
            "username": "some-user",
          }
        }
      />
    }
  />
  <ConfirmModal
    confirmButtonClass="btn btn-danger"
    confirmButtonText={
      <FormattedMessage
        defaultMessage="Promote"
        id="promote_to_user_modal.promote"
      />
    }
    message={
      <FormattedMessage
        defaultMessage="This action promotes the guest {username} to a member. It will allow the user to join public channels and interact with users outside of the channels they are currently members of. Are you sure you want to promote guest {username} to user?"
        id="promote_to_user_modal.desc"
        values={
          Object {
            "username": "some-user",
          }
        }
      />
    }
    modalClass=""
    onCancel={[Function]}
    onConfirm={[Function]}
    show={false}
    title={
      <FormattedMessage
        defaultMessage="Promote guest {username} to user"
        id="promote_to_user_modal.title"
        values={
          Object {
            "username": "some-user",
          }
        }
      />
    }
  />
  <ConfirmModal
    confirmButtonClass="btn btn-danger"
    confirmButtonText={
      <FormattedMessage
        defaultMessage="Demote"
        id="demote_to_user_modal.demote"
      />
    }
    message={
      <FormattedMessage
        defaultMessage="This action demotes the user {username} to a guest. It will restrict the user's ability to join public channels and interact with users outside of the channels they are currently members of. Are you sure you want to demote user {username} to guest?"
        id="demote_to_user_modal.desc"
        values={
          Object {
            "username": "some-user",
          }
        }
      />
    }
    modalClass=""
    onCancel={[Function]}
    onConfirm={[Function]}
    show={false}
    title={
      <FormattedMessage
        defaultMessage="Demote User {username} to Guest"
        id="demote_to_user_modal.title"
        values={
          Object {
            "username": "some-user",
          }
        }
      />
    }
  />
  <MenuWrapper
    animationComponent={[Function]}
    className=""
    isDisabled={false}
  >
    <div
      className="text-right"
    >
      <a>
        <span>
          <FormattedMessage
            defaultMessage="Member"
            id="admin.user_item.member"
          />
           
        </span>
        <span
          className="caret"
        />
      </a>
    </div>
    <Menu
      ariaLabel="User Actions Menu"
      openLeft={true}
      openUp={false}
    >
      <MenuItemAction
        disabled={false}
        onClick={[Function]}
        show={false}
        text="Activate"
      />
      <MenuItemAction
        disabled={false}
        onClick={[Function]}
        show={true}
        text="Deactivate"
      />
      <MenuItemAction
        onClick={[Function]}
        show={true}
        text="Manage Roles"
      />
      <MenuItemAction
        onClick={[Function]}
        show={true}
        text="Manage Teams"
      />
      <MenuItemAction
        onClick={[Function]}
        show={true}
        text="Manage Tokens"
      />
      <MenuItemAction
        onClick={[Function]}
        show={true}
        text="Remove MFA"
      />
      <MenuItemAction
        onClick={[Function]}
        show={false}
        text="Switch to Email/Password"
      />
      <MenuItemAction
        onClick={[Function]}
        show={true}
        text="Reset Password"
      />
      <MenuItemAction
        onClick={[Function]}
        show={true}
        text="Update Email"
      />
      <MenuItemAction
        onClick={[Function]}
        show={false}
        text="Promote to User"
      />
      <MenuItemAction
        onClick={[Function]}
        show={true}
        text="Demote to Guest"
      />
      <Connect(SystemPermissionGate)
        permissions={
          Array [
            "revoke_user_access_token",
          ]
        }
      >
        <MenuItemAction
          onClick={[Function]}
          show={true}
          text="Revoke Sessions"
        />
      </Connect(SystemPermissionGate)>
    </Menu>
  </MenuWrapper>
</Fragment>
`;

exports[`components/admin_console/system_users/system_users_dropdown/system_users_dropdown should match snapshot without license 1`] = `
<Fragment>
  <ConfirmModal
    confirmButtonClass="btn btn-danger"
    confirmButtonText={
      <FormattedMessage
        defaultMessage="Deactivate"
        id="deactivate_member_modal.deactivate"
      />
    }
    message={
      <div>
        <injectIntl(FormattedMarkdownMessage)
          defaultMessage="This action deactivates {username}. They will be logged out and not have access to any teams or channels on this system.\\\\n"
          id="deactivate_member_modal.desc"
          values={
            Object {
              "username": "some-user",
            }
          }
        />
        <injectIntl(FormattedMarkdownMessage)
          defaultMessage="Are you sure you want to deactivate {username}?"
          id="deactivate_member_modal.desc.confirm"
          values={
            Object {
              "username": "some-user",
            }
          }
        />
      </div>
    }
    modalClass=""
    onCancel={[Function]}
    onConfirm={[Function]}
    show={false}
    title={
      <FormattedMessage
        defaultMessage="Deactivate {username}"
        id="deactivate_member_modal.title"
        values={
          Object {
            "username": "some-user",
          }
        }
      />
    }
  />
  <ConfirmModal
    confirmButtonClass="btn btn-danger"
    confirmButtonText={
      <FormattedMessage
        defaultMessage="Revoke"
        id="revoke_user_sessions_modal.revoke"
      />
    }
    message={
      <FormattedMessage
        defaultMessage="This action revokes all sessions for {username}. They will be logged out from all devices. Are you sure you want to revoke all sessions for {username}?"
        id="revoke_user_sessions_modal.desc"
        values={
          Object {
            "username": "some-user",
          }
        }
      />
    }
    modalClass=""
    onCancel={[Function]}
    onConfirm={[Function]}
    show={false}
    title={
      <FormattedMessage
        defaultMessage="Revoke Sessions for {username}"
        id="revoke_user_sessions_modal.title"
        values={
          Object {
            "username": "some-user",
          }
        }
      />
    }
  />
  <ConfirmModal
    confirmButtonClass="btn btn-danger"
    confirmButtonText={
      <FormattedMessage
        defaultMessage="Promote"
        id="promote_to_user_modal.promote"
      />
    }
    message={
      <FormattedMessage
        defaultMessage="This action promotes the guest {username} to a member. It will allow the user to join public channels and interact with users outside of the channels they are currently members of. Are you sure you want to promote guest {username} to user?"
        id="promote_to_user_modal.desc"
        values={
          Object {
            "username": "some-user",
          }
        }
      />
    }
    modalClass=""
    onCancel={[Function]}
    onConfirm={[Function]}
    show={false}
    title={
      <FormattedMessage
        defaultMessage="Promote guest {username} to user"
        id="promote_to_user_modal.title"
        values={
          Object {
            "username": "some-user",
          }
        }
      />
    }
  />
  <ConfirmModal
    confirmButtonClass="btn btn-danger"
    confirmButtonText={
      <FormattedMessage
        defaultMessage="Demote"
        id="demote_to_user_modal.demote"
      />
    }
    message={
      <FormattedMessage
        defaultMessage="This action demotes the user {username} to a guest. It will restrict the user's ability to join public channels and interact with users outside of the channels they are currently members of. Are you sure you want to demote user {username} to guest?"
        id="demote_to_user_modal.desc"
        values={
          Object {
            "username": "some-user",
          }
        }
      />
    }
    modalClass=""
    onCancel={[Function]}
    onConfirm={[Function]}
    show={false}
    title={
      <FormattedMessage
        defaultMessage="Demote User {username} to Guest"
        id="demote_to_user_modal.title"
        values={
          Object {
            "username": "some-user",
          }
        }
      />
    }
  />
  <MenuWrapper
    animationComponent={[Function]}
    className=""
    isDisabled={false}
  >
    <div
      className="text-right"
    >
      <a>
        <span>
          <FormattedMessage
            defaultMessage="Member"
            id="admin.user_item.member"
          />
           
        </span>
        <span
          className="caret"
        />
      </a>
    </div>
    <Menu
      ariaLabel="User Actions Menu"
      openLeft={true}
      openUp={false}
    >
      <MenuItemAction
        disabled={false}
        onClick={[Function]}
        show={false}
        text="Activate"
      />
      <MenuItemAction
        disabled={false}
        onClick={[Function]}
        show={true}
        text="Deactivate"
      />
      <MenuItemAction
        onClick={[Function]}
        show={true}
        text="Manage Roles"
      />
      <MenuItemAction
        onClick={[Function]}
        show={true}
        text="Manage Teams"
      />
      <MenuItemAction
        onClick={[Function]}
        show={true}
        text="Manage Tokens"
      />
      <MenuItemAction
        onClick={[Function]}
        show={true}
        text="Remove MFA"
      />
      <MenuItemAction
        onClick={[Function]}
        show={false}
        text="Switch to Email/Password"
      />
      <MenuItemAction
        onClick={[Function]}
        show={true}
        text="Reset Password"
      />
      <MenuItemAction
        onClick={[Function]}
        show={true}
        text="Update Email"
      />
      <MenuItemAction
        onClick={[Function]}
        show={false}
        text="Promote to User"
      />
      <MenuItemAction
        onClick={[Function]}
        show={false}
        text="Demote to Guest"
      />
      <Connect(SystemPermissionGate)
        permissions={
          Array [
            "revoke_user_access_token",
          ]
        }
      >
        <MenuItemAction
          onClick={[Function]}
          show={true}
          text="Revoke Sessions"
        />
      </Connect(SystemPermissionGate)>
    </Menu>
  </MenuWrapper>
</Fragment>
`;
